# video-ai-samples

./: .gitignore  README.md
live_sports_coach/: README.md  kickboxing_example.py  main.py  pyproject.toml  tennis_example.py  utils.py
security_cam/: README.md  main.py  pyproject.toml
workout_assistant/: README.md  main.py  pyproject.toml  utils.py
