[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "live-sports-coach"
version = "0.1.0"
description = "Live Sports Coach AI w/ Stream"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "getstream[webrtc]==2.3.0a3",
    "google-genai==1.20.0",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
