[project]
name = "workout-assistant"
version = "0.1.0"
description = "Workout Assistant w/ Stream"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "getstream[webrtc]==2.3.0a3",
    "ultralytics>=8.3.170",
    "lap>=0.5.12",
    "shapely>=2.1.1",
    "python-dotenv>=1.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
